# final_freshman3

./: .gitignore  CMakeLists.txt  LICENSE  README.md
mediaplayer/include/: LibraryManager.h  Playlist.h  Track.h
mediaplayer/src/: LibraryManager.cpp  LrcParser.cpp  LyricsWidget.cpp  Playlist.cpp  Track.cpp  Transcoder.cpp  main.cpp
